--- a/pages/3439.html
+++ b/pages/3439.html
@@ -444,7 +444,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='chernweil_theory'><math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Chern-Weil theory</h4>
+<h4 id='chernweil_theory'><math class='maruku-mathml' display='inline' id='mathml_cdf5b50a3343d9a9e88d37633255e9f05dca0169_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Chern-Weil theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/Chern-Weil+theory+in+Smooth%E2%88%9EGrpd'>∞-Chern-Weil theory</a></strong></p>
@@ -553,69 +553,12 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents_2'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#categorytheoretic_description'>Category-theoretic description</a><ul><li><a href='#classical_gauge_fixings'>Classical gauge fixings</a></li></ul></li><li><a href='#examples_2'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p><a class='existingWikiWord' href='/nlab/show/configuration+space'>Configuration spaces</a> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> are typically not just plain spaces, but are <a class='existingWikiWord' href='/nlab/show/groupoid'>groupoid</a>s and generally <a class='existingWikiWord' href='/nlab/show/infinity-groupoid'>∞-groupoid</a>s. This is traditionally most familiar for configuration spaces of <a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge theories</a>:</p>
-
-<ul>
-<li>
-<p>the <a class='existingWikiWord' href='/nlab/show/object'>object</a>s are the (field-)configurations of the physical system;</p>
-</li>
-
-<li>
-<p>the <a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a>s between objects are <a class='existingWikiWord' href='/nlab/show/gauge+transformation'>gauge transformation</a>s between different but equivalent field configurations;</p>
-</li>
-
-<li>
-<p>the <a class='existingWikiWord' href='/nlab/show/k-morphism'>k-morphism</a>s are “gauge-transformations of gauge transformation”:</p>
-
-<p>(these higher order gauge transformations are in the traditional physics literature mainly known in their infinitesimal approximation where the configuration <a class='existingWikiWord' href='/nlab/show/Lie+n-groupoid'>Lie ∞-groupoid</a> is approximated by a <a class='existingWikiWord' href='/nlab/show/Lie+infinity-algebroid'>Lie-∞-algebroid</a> whose <a class='existingWikiWord' href='/schreiber/show/Chevalley-Eilenberg+algebra' title='schreiber'>Chevalley-Eilenberg algebra</a> is the <a class='existingWikiWord' href='/nlab/show/BRST+complex'>BRST complex</a>: here they correspond to <em>ghosts of ghosts</em> ).</p>
-</li>
-</ul>
-
-<p>The operation called <strong>gauge fixing</strong> can essentially be understood as the passage to a more <a class='existingWikiWord' href='/nlab/show/skeleton'>skelatized</a> <a class='existingWikiWord' href='/nlab/show/infinity-groupoid'>∞-groupoid</a>: in the simplest case, it amounts to picking one representative configuration from each equivalence class.</p>
-
-<p>Generally, since the configuration <a class='existingWikiWord' href='/nlab/show/infinity-groupoid'>∞-groupoid</a> typically carries extra structure in that it is a <a class='existingWikiWord' href='/nlab/show/topological+infinity-groupoid'>topological ∞-groupoid</a> or a <a class='existingWikiWord' href='/nlab/show/Lie+n-groupoid'>Lie ∞-groupoid</a> or the like, the choice of <strong>gauge slice</strong> as it is called is similarly required to preserve that structure.</p>
+<p>See <em><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>A first idea of quantum field theory</a></em> the chapter <em><a href='A+first+idea+of+quantum+field+theory#GaugeFixing'>Gauge fixing</a></em>.</p>
 
 <h2 id='examples'>Examples</h2>
-
-<p>Standard textbook examples of gauge fixings include the following:</p>
-
-<ul>
-<li>
-<p>in the <a class='existingWikiWord' href='/nlab/show/gauge+theory'>gauge theory</a> of the <strong><a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a></strong>, a field configuration is, on a given <a class='existingWikiWord' href='/nlab/show/pseudo-Riemannian+manifold'>pseudo-Riemannian manifold</a> a <a class='existingWikiWord' href='/nlab/show/line+bundle'>line bundle</a> <a class='existingWikiWord' href='/nlab/show/connection+on+a+bundle'>with connection</a>. Often the special case is considered where the underlying manifold is just <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski space</a> and the bundle is assumed to be trivial, in which case a configuration of the gauge field configuration is just a <a class='existingWikiWord' href='/nlab/show/differential+form'>1-form</a> <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> on Minkowski space, and a gauge transformation <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>λ</mi><mo>:</mo><mi>A</mi><mo>→</mo><mi>A</mi><mo>′</mo></mrow><annotation encoding='application/x-tex'>\lambda: A \to A&#39;</annotation></semantics></math> is a 0-form, i.e. a function, such that <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>′</mo><mo>=</mo><mi>A</mi><mo>+</mo><mi>d</mi><mi>λ</mi></mrow><annotation encoding='application/x-tex'>A&#39; = A + d \lambda</annotation></semantics></math>.</p>
-
-<ul>
-<li>in the <strong><a class='existingWikiWord' href='/nlab/show/Lorenz+gauge'>Lorenz gauge</a></strong> the gauge field <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> is taken to be a <a class='existingWikiWord' href='/nlab/show/harmonic+differential+form'>harmonic</a> 1-form <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><mo>⋆</mo><mi>d</mi><mo>⋆</mo><mi>A</mi><mo>=</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>d \star d \star A = 0</annotation></semantics></math>.</li>
-</ul>
-</li>
-</ul>
-
-<h2 id='categorytheoretic_description'>Category-theoretic description</h2>
-
-<p>Here are more details on how one may think of gauge fixing from the <a class='existingWikiWord' href='/nlab/show/nPOV'>nPOV</a>.</p>
-
-<p>In the <a class='existingWikiWord' href='/nlab/show/Quantization+as+a+Kan+Extension'>Freed and Alm-Schreiber approach to quantization</a>, the <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a> is a <a class='existingWikiWord' href='/nlab/show/functor'>functor</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>e</mi> <mrow><mi mathvariant='normal'>i</mi><mi>S</mi></mrow></msup><mo>:</mo><mi>X</mi><mo>→</mo><mi>nVect</mi><mo>,</mo></mrow><annotation encoding='application/x-tex'>
-e^{\mathrm{i}S}:X \to nVect,
-
-</annotation></semantics></math></div>
-<p>where <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> is some <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,n)</annotation></semantics></math>-groupoid called the <em>space of fields</em>. The space of fields comes equipped with a projection <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>π</mi><mo>:</mo><mi>X</mi><mo>→</mo><mi>M</mi></mrow><annotation encoding='application/x-tex'>\pi:X\to M</annotation></semantics></math> to an <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,n)</annotation></semantics></math>-groupoid <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math> called the <em>moduli space</em> of the quantum theory. Then the (path integral) quantization is, if it exists, the <a class='existingWikiWord' href='/nlab/show/Kan+extension'>Kan extension</a> <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Z</mi><mo>:</mo><mi>M</mi><mo>→</mo><mi>nVect</mi></mrow><annotation encoding='application/x-tex'>Z:M\to nVect</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>e</mi> <mrow><mi mathvariant='normal'>i</mi><mi>S</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>e^{\mathrm{i}S}</annotation></semantics></math> along <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>π</mi></mrow><annotation encoding='application/x-tex'>\pi</annotation></semantics></math>. The functor <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Z</mi></mrow><annotation encoding='application/x-tex'>Z</annotation></semantics></math> is customary called the <em>partition function</em> of the theory.</p>
-
-<p>A <strong>gauge fixing</strong> is a choice of a subgroupoid <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>X</mi> <mi>gf</mi></msub></mrow><annotation encoding='application/x-tex'>X_{gf}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_18' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math> such that the inclusion <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_19' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>X</mi> <mi>gf</mi></msub><mo>↪</mo><mi>X</mi></mrow><annotation encoding='application/x-tex'>X_{gf}\hookrightarrow X</annotation></semantics></math> is an equivalence. The basic idea of gauge fixing is that the gauge fixed partition functions <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_20' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Z</mi> <mi>gf</mi></msub></mrow><annotation encoding='application/x-tex'>Z_{gf}</annotation></semantics></math>, when they exist, are independent of the particular gauge fixing (since gauge fixing are all equivalent each other) and are equivalent to the original partition function <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_21' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Z</mi></mrow><annotation encoding='application/x-tex'>Z</annotation></semantics></math> (since <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_22' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>X</mi> <mi>gf</mi></msub></mrow><annotation encoding='application/x-tex'>X_{gf}</annotation></semantics></math> is equivalent to <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_23' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi></mrow><annotation encoding='application/x-tex'>X</annotation></semantics></math>).</p>
-
-<p>A classical instance of gauge fixing is when <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_24' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>=</mo><mover><mi>X</mi><mo stretchy='false'>˜</mo></mover><mo stretchy='false'>/</mo><mo stretchy='false'>/</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>X=\tilde{X}//G</annotation></semantics></math> is an action groupoid, for the action of some group <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_25' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> (the gauge group) on a manifold <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_26' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>X</mi><mo stretchy='false'>˜</mo></mover></mrow><annotation encoding='application/x-tex'>\tilde{X}</annotation></semantics></math>. In this case a classical gauge fixing is the choice of a <em>slice</em> <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_27' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi></mrow><annotation encoding='application/x-tex'>S</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_28' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>X</mi><mo stretchy='false'>˜</mo></mover></mrow><annotation encoding='application/x-tex'>\tilde{X}</annotation></semantics></math> intersecting each orbit of <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_29' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> exactly once. If the action of <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_30' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>G</mi></mrow><annotation encoding='application/x-tex'>G</annotation></semantics></math> on <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_31' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>X</mi><mo stretchy='false'>˜</mo></mover></mrow><annotation encoding='application/x-tex'>\tilde{X}</annotation></semantics></math> is not free, there still will be nontrivial automorphisms in the groupoid <math class='maruku-mathml' display='inline' id='mathml_8c88fd00364f0fdb1c8516469d7a857e2ce85dfa_32' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>S</mi><mo stretchy='false'>/</mo><mo stretchy='false'>/</mo><mi>G</mi></mrow><annotation encoding='application/x-tex'>S//G</annotation></semantics></math>; these residual internal symmetries are sometimes called <em>ghost symmetries</em></p>
-
-<h3 id='classical_gauge_fixings'>Classical gauge fixings</h3>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/BRST+complex'>BRST complex</a></li>
-
-<li><a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV theory</a></li>
-</ul>
-
-<h2 id='examples_2'>Examples</h2>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/temporal+gauge'>temporal gauge</a></li>
@@ -676,14 +619,14 @@ e^{\mathrm{i}S}:X \to nVect,
 </div>
 
 <div class="revisedby">
-  Revised on December 18, 2017 06:16:47 
+  Revised on January  3, 2018 05:44:55 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.92.170)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/gauge+fixing" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gauge+fixing/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/gauge+fixing" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gauge+fixing" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/gauge+fixing" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/gauge+fixing/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/gauge+fixing" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/gauge+fixing" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
