--- a/pages/5287.html
+++ b/pages/5287.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,18 +308,68 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Under the identification of a <a class='existingWikiWord' href='/nlab/show/BV-algebra'>BV-algebra</a> with the homology of a <a class='existingWikiWord' href='/nlab/show/little+cubes+operad'>E2-algebra</a> the BV-operator corresponds to the operation of rotating a little disk around.</p>
+    <h2 id='idea'>Idea</h2>
+
+<p>In <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a> the <em>BV-operator</em> is the difference between the action of the <a class='existingWikiWord' href='/nlab/show/BV-BRST+formalism'>BV differential</a> on the <a class='existingWikiWord' href='/nlab/show/observable'>algebra of observables</a> before and after <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a>.</p>
+
+<p>In <a class='existingWikiWord' href='/nlab/show/higher+algebra'>higher algebra</a>, under the identification of a <a class='existingWikiWord' href='/nlab/show/BV-algebra'>BV-algebra</a> with the <a class='existingWikiWord' href='/nlab/show/chain+homology+and+cohomology'>chain homology</a> of a <a class='existingWikiWord' href='/nlab/show/little+cubes+operad'>E2-algebra</a>, the <em>BV-operator</em> corresponds to the operation of rotating a little disk around.</p>
+
+<p>For the relation between the two see <em><a class='existingWikiWord' href='/nlab/show/relation+between+BV+and+BD'>relation between BV and BD</a></em>.</p>
+
+<h2 id='in_perturbative_quantum_field_theory'>In perturbative quantum field theory</h2>
+
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_fb8b689a7020d3bf63f9399443df13b5eafeb95e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>E</mi><mo>,</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(E,\mathbf{L})</annotation></semantics></math> be a <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free</a> <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> and let <math class='maruku-mathml' display='inline' id='mathml_fb8b689a7020d3bf63f9399443df13b5eafeb95e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>′</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><msub><mo>′</mo> <mi>BRST</mi></msub></mrow><annotation encoding='application/x-tex'>\mathbf{L}&#39; - \mathbf{L}&#39;_{BRST}</annotation></semantics></math> be its <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a> after <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a>, so that the gauge-fixed <a class='existingWikiWord' href='/nlab/show/local+BRST+cohomology'>local BV-BRST differential</a> is given by the <a class='existingWikiWord' href='/nlab/show/local+antibracket'>local antibracket</a> as</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_fb8b689a7020d3bf63f9399443df13b5eafeb95e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi><mo>′</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mrow><mo>{</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>′</mo><mo lspace='verythinmathspace' rspace='0em'>+</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><msub><mo>′</mo> <mi>BRST</mi></msub><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>}</mo></mrow></mrow><annotation encoding='application/x-tex'>
+  s&#39; 
+    \;=\;
+  \left\{ -\mathbf{L}&#39; + \mathbf{L}&#39;_{BRST}, - \right\}
+
+</annotation></semantics></math></div>
+<p>This descends to <a class='existingWikiWord' href='/nlab/show/polynomial+observable'>regular polynomial observables</a>:</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_fb8b689a7020d3bf63f9399443df13b5eafeb95e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∫</mo><mrow><mo>{</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>′</mo><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>+</mo><mstyle mathvariant='bold'><mi>L</mi></mstyle><msub><mo>′</mo> <mi>BRST</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo>}</mo></mrow></mrow><annotation encoding='application/x-tex'>
+  \int \left\{ -\mathbf{L}&#39;(x) + \mathbf{L}&#39;_{BRST}(x), - \right\}
+
+</annotation></semantics></math></div>
+<p>By definition of <a class='existingWikiWord' href='/nlab/show/gauge+fixing'>gauge fixing</a> the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>equation of motion</a> for <math class='maruku-mathml' display='inline' id='mathml_fb8b689a7020d3bf63f9399443df13b5eafeb95e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mstyle mathvariant='bold'><mi>L</mi></mstyle><mo>′</mo></mrow><annotation encoding='application/x-tex'>\mathbf{L}&#39;</annotation></semantics></math> are <a class='existingWikiWord' href='/nlab/show/Green+hyperbolic+partial+differential+equation'>Green hyperbolic</a> and hence admit, in particular, a <em><a class='existingWikiWord' href='/nlab/show/Hadamard+distribution'>Wightman propagator</a></em> <math class='maruku-mathml' display='inline' id='mathml_fb8b689a7020d3bf63f9399443df13b5eafeb95e_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Δ</mi> <mi>H</mi></msub></mrow><annotation encoding='application/x-tex'>\Delta_H</annotation></semantics></math> and a <a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a> <math class='maruku-mathml' display='inline' id='mathml_fb8b689a7020d3bf63f9399443df13b5eafeb95e_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Δ</mi> <mi>F</mi></msub></mrow><annotation encoding='application/x-tex'>\Delta_F</annotation></semantics></math>. The <a class='existingWikiWord' href='/nlab/show/star+product'>star products</a> with respect to these are the <a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal-ordered product</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_fb8b689a7020d3bf63f9399443df13b5eafeb95e_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mn>1</mn></msub><msub><mo>⋆</mo> <mi>H</mi></msub><msub><mi>A</mi> <mn>2</mn></msub><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><mo stretchy='false'>(</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>⋅</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo>∘</mo><mi>exp</mi><mrow><mo>(</mo><mi>ℏ</mi><msub><mo>∫</mo> <mi>Σ</mi></msub><msub><mi>Δ</mi> <mi>H</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><msup><mo stretchy='false'>)</mo> <mrow><mi>a</mi><mi>b</mi></mrow></msup><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mi>ϕ</mi> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow></mfrac><mo>⊗</mo><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mi>ϕ</mi> <mi>b</mi></msup><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow></mfrac><mo>)</mo></mrow><mo stretchy='false'>(</mo><msub><mi>A</mi> <mn>1</mn></msub><mo>⊗</mo><msub><mi>A</mi> <mn>2</mn></msub><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  A_1 \star_H A_2 
+  \;\coloneqq\;
+  ((-) \cdot (-))
+  \circ
+  \exp\left(
+    \hbar \int_\Sigma \Delta_{H}(x,y)^{a b} \frac{\delta}{\delta \phi^a(x)} \otimes \frac{\delta}{\delta \phi^b(y)}
+  \right)
+  (A_1 \otimes A_2)
+
+</annotation></semantics></math></div>
+<p>and the <a class='existingWikiWord' href='/nlab/show/Dyson+formula'>time-ordered product</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_fb8b689a7020d3bf63f9399443df13b5eafeb95e_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>A</mi> <mn>1</mn></msub><msub><mo>⋆</mo> <mi>F</mi></msub><msub><mi>A</mi> <mn>2</mn></msub><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><mo stretchy='false'>(</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo>⋅</mo><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo><mo>∘</mo><mi>exp</mi><mrow><mo>(</mo><mi>ℏ</mi><msub><mo>∫</mo> <mi>Σ</mi></msub><msub><mi>Δ</mi> <mi>F</mi></msub><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><msup><mo stretchy='false'>)</mo> <mrow><mi>a</mi><mi>b</mi></mrow></msup><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mi>ϕ</mi> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow></mfrac><mo>⊗</mo><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mi>ϕ</mi> <mi>b</mi></msup><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow></mfrac><mo>)</mo></mrow><mo stretchy='false'>(</mo><msub><mi>A</mi> <mn>1</mn></msub><mo>⊗</mo><msub><mi>A</mi> <mn>2</mn></msub><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>,</mo></mrow><annotation encoding='application/x-tex'>
+  A_1 \star_F A_2 
+  \;\coloneqq\;
+  ((-) \cdot (-))
+  \circ
+  \exp\left(
+    \hbar \int_\Sigma \Delta_{F}(x,y)^{a b} \frac{\delta}{\delta \phi^a(x)} \otimes \frac{\delta}{\delta \phi^b(y)}
+  \right)
+  (A_1 \otimes A_2)
+  \,,
+
+</annotation></semantics></math></div>
+<p>respectively.</p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
-  Created on November 25, 2010 10:56:07 
+  Revised on January  3, 2018 05:40:57 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (87.212.203.135)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/BV-operator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/BV-operator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/BV-operator/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/BV-operator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/BV-operator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
