--- a/pages/18900.html
+++ b/pages/18900.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      perturbative observables -- table in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      perturbative observables -- table
   </h1>
 
 
@@ -309,19 +309,15 @@ margin-left: 0em;
 
 <div id="revision">
     <p><strong><a class='existingWikiWord' href='/nlab/show/type'>types</a> of <a class='existingWikiWord' href='/nlab/show/observable'>observables</a> in <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum field theory</a></strong></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8090c11d2cac0c918a79c702d6bb66ee0421ee0b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd><mtext><a href='https://ncatlab.org/nlab/show/field+oservable'>field</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='https://ncatlab.org/nlab/show/linear+observable'>linear</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='https://ncatlab.org/nlab/show/local+observable'>local</a></mtext></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mo>↘</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mtext><a href='https://ncatlab.org/nlab/show/microcausal+polynomial+observable'>microcausal</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='https://ncatlab.org/nlab/show/polynomial+observable'>polynomial</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='https://ncatlab.org/nlab/show/observable'>general</a></mtext></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mo>↗</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mtext><a href='https://ncatlab.org/nlab/show/linear+observable'>linear</a></mtext></mtd> <mtd></mtd> <mtd><mtext><a href='https://ncatlab.org/nlab/show/regular+polynomial+observable'>regular</a></mtext></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d1db52d3f5652926584343a8b697a6f9903c5b14_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable><mtr><mtd></mtd> <mtd></mtd> <mtd><mtext><a href='https://ncatlab.org/nlab/show/local+observable'>local</a></mtext></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>↗</mo></mtd> <mtd></mtd> <mtd><mo>↘</mo></mtd></mtr> <mtr><mtd><mtext><a href='https://ncatlab.org/nlab/show/linear+observable'>linear</a></mtext></mtd> <mtd></mtd> <mtd></mtd> <mtd></mtd> <mtd><mtext><a href='https://ncatlab.org/nlab/show/microcausal+polynomial+observable'>microcausal</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='https://ncatlab.org/nlab/show/polynomial+observable'>polynomial</a></mtext></mtd> <mtd><mo>⟶</mo></mtd> <mtd><mtext><a href='https://ncatlab.org/nlab/show/observable'>general</a></mtext></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>↘</mo></mtd> <mtd></mtd> <mtd><mo>↗</mo></mtd></mtr> <mtr><mtd></mtd> <mtd></mtd> <mtd><mtext><a href='https://ncatlab.org/nlab/show/regular+polynomial+observable'>regular</a></mtext></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \array{
-    \text{&lt;a href=&quot;https://ncatlab.org/nlab/show/field+oservable&quot;&gt;field&lt;/a&gt;}
-    &amp;\longrightarrow&amp;
-    \text{&lt;a href=&quot;https://ncatlab.org/nlab/show/linear+observable&quot;&gt;linear&lt;/a&gt;}    
-    &amp;\longrightarrow&amp;
+    &amp;&amp;
     \text{&lt;a href=&quot;https://ncatlab.org/nlab/show/local+observable&quot;&gt;local&lt;/a&gt;}
     \\
-    &amp;&amp;
-    &amp;&amp;
+    &amp;\nearrow&amp;
     &amp; \searrow
     \\ 
-    &amp;&amp;
+    \text{&lt;a href=&quot;https://ncatlab.org/nlab/show/linear+observable&quot;&gt;linear&lt;/a&gt;}    
     &amp;&amp; &amp;&amp;
     \text{&lt;a href=&quot;https://ncatlab.org/nlab/show/microcausal+polynomial+observable&quot;&gt;microcausal&lt;/a&gt;}
     &amp;\longrightarrow&amp;
@@ -329,12 +325,9 @@ margin-left: 0em;
     &amp;\longrightarrow&amp;
     \text{&lt;a href=&quot;https://ncatlab.org/nlab/show/observable&quot;&gt;general&lt;/a&gt;}
     \\
-    &amp;&amp;
-    &amp;&amp; 
+    &amp;\searrow&amp; 
     &amp; \nearrow
     \\
-    &amp;&amp;
-\text{&lt;a href=&quot;https://ncatlab.org/nlab/show/linear+observable&quot;&gt;linear&lt;/a&gt;}    
     &amp;&amp;
     \text{&lt;a href=&quot;https://ncatlab.org/nlab/show/regular+polynomial+observable&quot;&gt;regular&lt;/a&gt;}
   }
@@ -343,22 +336,22 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  3, 2018 11:59:05 
+  Created on January  3, 2018 11:50:15 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1377" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1377 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/perturbative+observables+--+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/perturbative+observables+--+table" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/perturbative+observables+--+table" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/perturbative+observables+--+table" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
